# qpuc_tieng_edition

./: README.md  main.py  main_pygame.py  main_pygame_round_2.py  pyproject.toml
config/: contestants.yaml
data/media/images/buzzer/: buzzer_raw.pdn  filled_point.pdn
data/questions/: round_1.yaml  round_2.yaml  round_3.yaml  round_4.yaml
